fix: vertical alignment of nested icons in buttons

--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -82,5 +82,6 @@ $btn-height: 3.6rem;
 
   > .lia-btn__text {
     margin-left: 1rem;
+    vertical-align: middle;
   }
 }
